--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<version>3.8.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.apple</groupId>
+			<artifactId>AppleJavaExtensions</artifactId>
+			<version>1.4</version>
+		</dependency>
+
 
 	</dependencies>
 	<properties>
